<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_benchmark"
        android:title="@string/menu_benchmark"
        android:icon="@drawable/ic_benchmark"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_device_info"
        android:title="@string/menu_device_info"
        android:icon="@drawable/ic_device_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/dialog_clear_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_theme"
        android:title="@string/menu_toggle_theme"
        android:icon="@drawable/ic_theme_toggle"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_battery_saver"
        android:title="@string/menu_battery_saver"
        android:icon="@drawable/ic_battery_saver"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never" />

</menu>
